--- a/.github/workflows/build_and_release.yml
+++ b/.github/workflows/build_and_release.yml
@@ -8,7 +8,7 @@ on:
         required: true
       note:
         description: 'Release note'
-        
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -30,7 +30,8 @@ jobs:
         run: |
           git config --global user.name 'CharonTung'
           git config --global user.email 'Tung.Charon@gmail.com'
-          git commit -am "dist build"
+          git add . # Ensure new files are added
+          git commit -m "dist build"
           git push
 
   release:
@@ -45,15 +46,15 @@ jobs:
           git pull
       - name: Tag it
         run: |
-          git tag -a ${{ inputs.tag }} -m "${{ inputs.note }}" master
+          git tag -a ${{ github.event.inputs.tag }} -m "${{ github.event.inputs.note }}" master
           git push --tags
       - name: Release
         uses: actions/create-release@v1
         env:
-          GITHUB_TOKEN: ${{ secrets.github_token }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          tag_name: ${{ inputs.tag }}
-          release_name: Release ${{ inputs.tag }}
-          body: ${{ inputs.note }}
+          tag_name: ${{ github.event.inputs.tag }}
+          release_name: Release ${{ github.event.inputs.tag }}
+          body: ${{ github.event.inputs.note }}
           draft: false
           prerelease: false
