--- a/.github/workflows/build_and_release.yml
+++ b/.github/workflows/build_and_release.yml
@@ -33,7 +33,25 @@ jobs:
           git add . # Ensure new files are added
           git commit -m "dist build"
           git push
-
+  test:
+    runs-on: ubuntu-latest
+    defaults:
+      run:
+        shell: bash
+  steps:
+    - uses: actions/checkout@v4
+    - name: Test index.js
+      env:
+        INPUT_GITHUB_USERNAME: "CharonTung"
+        INPUT_GITHUB_TOKEN: ${{ secrets.KEYS }}
+        INPUT_TAGERT_REPOS: '[CharonTung/activity-log]'
+        INPUT_OUTPUT_STYLE: MARKDOWN
+        INPUT_IGNORE_EVENTS: '[]'
+        INPUT_README_PATH: README.md
+        INPUT_COMMIT_MESSAGE: Update README.md
+        INPUT_EVENT_LIMIT: '100'
+      run: node ./dist/index.js
+      
   release:
     runs-on: ubuntu-latest
     needs: build
